@@ -84,7 +84,3 @@
     </div>
   </div>
 </div>
-
-<script type="text/javascript" charset="utf-8">
-  ConsoleUpdater.jobId = <%= @last_job %>;
-</script>
